# Lab_3

multiplication_function/: CMakeLists.txt
multiplication_function/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
multiplication_function/debug/.cmake/api/v1/reply/: cache-v2-5e7e445911d8d3e4a96d.json  cmakeFiles-v1-9f7ba526db2b2a6159a2.json  codemodel-v2-54f7abbfa4c19e3dd7e5.json  (+11 more)
multiplication_function/debug/multiplylib/: cmake_install.cmake
multiplication_function/debug/multiplylib_tests/: cmake_install.cmake
multiplication_function/debug/multiplylib_tests/lib/: CTestTestfile.cmake  cmake_install.cmake
multiplication_function/debug/multiplylib_tests/lib/googlemock/: CTestTestfile.cmake  cmake_install.cmake
multiplication_function/debug/multiplylib_tests/lib/googletest/: CTestTestfile.cmake  cmake_install.cmake
multiplication_function/multiplylib/: CMakeLists.txt  multiply.cpp  multiply.h
multiplication_function/multiplylib_tests/: CMakeLists.txt  multiply_test.cpp
multiplication_function/release/: CMakeCache.txt  build.ninja  cmake_install.cmake
multiplication_function/release/multiplylib/: cmake_install.cmake
multiplication_function/release/multiplylib_tests/: cmake_install.cmake
multiplication_function/release/multiplylib_tests/lib/: CTestTestfile.cmake  cmake_install.cmake
multiplication_function/release/multiplylib_tests/lib/googlemock/: CTestTestfile.cmake  cmake_install.cmake
multiplication_function/release/multiplylib_tests/lib/googletest/: CTestTestfile.cmake  cmake_install.cmake
(+15 files in other folders)
